<resources>
    <string name="app_name">EventX</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email" />
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="regist" />
    <string name="e_mail2">E-mail</string>
    <string name="password2">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register1">Register</string>
    <string name="welcome">WELCOME</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>
